--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Caixeiro_Viajante_CaixeiroViajante2</name>
+	<name>caixeiro_viajante</name>
 	<comment></comment>
 	<projects>
 	</projects>
